Fix: Home page friends button overlap

--- a/Discord_Windows_11.theme.css
+++ b/Discord_Windows_11.theme.css
@@ -1,6 +1,6 @@
 /* /**
 * @name Discord Windows 11
-* @version 2024.09.04.0
+* @version 2024.09.30.0
 * @description Windows 11 styling for Discord.
 * @author Josh65-2201
 * @source https://github.com/Josh65-2201/Discord-Windows-11-theme
@@ -997,9 +997,9 @@
 		/* Custom offline message */
 		.container_e40c16::before{
 			position: absolute;
-			width: calc(100% - var(--sidebarWidth) - 384px);
-			left: 412px;
-			padding: 11px;
+			width: calc(100% - var(--sidebarWidth) - 400px);
+			left: 400px;
+			padding: 12px;
 			padding-left: 48px;
 			background: rgb(var(--infobarBackgroundCritical));
 			border-radius: 4px;
@@ -1864,6 +1864,11 @@
 				background: rgb(var(--infobarBackgroundMessage)) !important;
 				opacity: 1 !important;
 				border-radius: 4px;
+			}
+
+			/* Message bar */
+			.channelAppLauncher_df39bd{
+				margin-bottom: 0px;
 			}
 
 
@@ -3060,7 +3065,7 @@
 		.iconContainer_d8bfb3::after{
 			height: 16px;
 			width: 3px;
-			background: var(--os-accent-color, #4cc2ff);
+			background: color-mix(in srgb, var(--os-accent-color, #4cc2ff) 20%, white);
 			border-radius: 25%;
 		}
 
@@ -3847,7 +3852,7 @@
 	.iconWrapper_fc4f04[aria-label="Help"]{ /* Channel information bar: Help button */
 		display: none !important;
 	}
-	ul.content_eed6a8 > div:nth-child(2){ /* Server sidebar: Blank gaps */
+	.scroller_c43953 > ul.content_eed6a8 > div:nth-child(2){ /* Server sidebar: Blank gaps */
 		height: 0px !important;
 	}
 
